# pixweb

./: .gitignore  Cargo.toml  LICENSE  flake.nix  index.html  test_colors
checks/: commit-check  default.nix
src/: color.rs  main.rs
src/components/: color_tile.rs  mod.rs
