[package]
name = "pixweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-file = "0.2.1"
hex = "0.4.3"
js-sys = "0.3.57"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.5.6"
stylist = { features=["yew", "yew_use_style"], version="0.10.1"}
wasm-logger = "0.2.0"
web-sys = "0.3.58"
yew = "0.19"
